implementations/reference-platform/kubernetes/tests/verify-images/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-image
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/test-verify-image:unsigned
---
apiVersion: v1
kind: Pod
metadata:
  name: wrong-workflow-image
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/test-verify-image:signed-keyless
---
apiVersion: v1
kind: Pod
metadata:
  name: missing-provenance-image
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/test-verify-image:signed-by-someone-else
---
apiVersion: v1
kind: Pod
metadata:
  name: missing-sbom-image
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/test-verify-image:signed-by-someone-else
